--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -46,6 +46,15 @@
             android:adjustViewBounds="true"
             android:layout_below="@+id/info_text" />
 
+        <ImageView
+            android:id="@+id/videoSign"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_centerInParent="true"
+            android:alpha="0.7"
+            android:src="@drawable/ic_videosign"
+            android:visibility="invisible" />
+
 
         <Button
             android:id="@+id/favorite_button"
